2004-10-01  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Copy tests/tl.jar to build dir
	and add it to the CLASSPATH.
	* src/jacl/tcl/lang/Interp.java (convertStringCRLF,
	readScriptFromURL): Move CRLF conversion code into
	helper function so that it can be regression tested.
	* src/tclblend/tcl/lang/Interp.java (evalResource,
	readScriptFromInputStream): Remove JDK compressed jar
	hack and replace with Reader/Writer code in the
	readScriptFromInputStream helper.
	* tests/tl.jar: Add jar for test cases.
	* tests/jacl/Interp.test: Add test case for
	evalResource() in the Interp class.
	* tests/tclblend/javaInterp.test: Add test case
	for evalResource() in the Interp class.

2004-09-30  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* tcljava.m4 (TCLJAVA_ENABLE_JACL_OR_TCLBLEND):
	When building with Jacl only, set the ac_cv_tcl_win32
	var based on the results of uname -s. This fixes
	a native path conversion code problem that was
	causing a configure problem and was causing
	`make test` to fail.
	[Bug 904653]

2004-09-30  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/FileChannel.java (close): Set file
	member to null after closing.
	* src/jacl/tcl/lang/Interp.java (readScriptFromFile,
	readScriptFromURL, readScriptFromInputStream, evalResource):
	Use new Tcl IO layer to filter CRLF to LF when
	sourcing data from a file. Use new ReadInputStreamChannel
	class to read and filter data from an InputStream
	either from a resource or a URL. This removes any
	attempts to use the available method to do any sort
	of non-blocking IO in the Interp class.
	* src/jacl/tcl/lang/ReadInputStreamChannel.java: Add
	new class to read data from an InputStream as a Channel.
	* tests/all.tcl: Fixup tcltest variable setting
	so that it works in Jacl.
	* tests/jacl/Interp.test: Add test cases for CRLF to LF
	conversion when sourcing a file or a URL.
	[Bug 1000176]

2004-09-28  Mo DeJong  <mdejong@users.sourceforge.net>
