@@ -1,3 +1,11 @@
+2004-11-17  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* src/jacl/tcl/lang/ExecCmd.java (execWin):
+	Add "windows xp" as one of the OS strings
+	checked before execing the pre JDK 1.3
+	version of exec.
+	[Bug 879167]
+
 2004-10-01  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* Makefile.in: Copy tests/tl.jar to build dir
